syntax = "proto3";
option go_package="/distributed-project/mapreduce/master";
package common;

message RegisterRequest {
  string address = 1;
}

message ShutdownReply {
  int32 nTasks = 1;
}

message DoTaskRequest {
  string jobName = 1;
  string filename = 2;
  string phase = 3;
  int32 taskNo = 4;
  int32 numOtherPhase = 5;
}
