syntax = "proto3";
option go_package = "/distributed-project/mapreduce/master";
package worker;
import "google/protobuf/empty.proto";
import "protos/common.proto";

service Worker {
  rpc DoTask(common.DoTaskRequest) returns(google.protobuf.Empty) {}
  rpc Shutdown(google.protobuf.Empty) returns(common.ShutdownReply) {}
}

